fixed broken ui
:q

--- a/client/Components/Cart/cart.scss
+++ b/client/Components/Cart/cart.scss
@@ -16,12 +16,12 @@
     padding: 2%;
 }
 
-.polaroid {
+.cart-dogs div.polaroid {
     height: 16vw;
-    width: 2vw;
+    width: 15vw;
 }
 
-.polaroid .dog-pic {
+.dog-pic {
     height: 13vw;
     width: 12vw;
 }
